--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,4 +57,7 @@ dependencies {
     testImplementation 'androidx.arch.core:core-testing:2.1.0'
     androidTestImplementation 'androidx.arch.core:core-testing:2.1.0'
 
+    //Mockito library
+    testImplementation 'org.mockito:mockito-core:4.4.0'
+    testImplementation 'com.nhaarman.mockitokotlin2:mockito-kotlin:2.2.0'
 }
