--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,5 +45,8 @@ dependencies {
 
     implementation 'com.google.code.gson:gson:2.10'
 
+    //Mockito library
+    testImplementation 'org.mockito:mockito-core:4.4.0'
+    testImplementation 'com.nhaarman.mockitokotlin2:mockito-kotlin:2.2.0'
 
 }
